# docs/swagger.json
@@ -6001,11 +6001,19 @@
                     "WebApi"
                 ],
                 "summary": "登录Token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "授权Code",
+                        "name": "code",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "description": "成功",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.RespLogin"
                         }
                     }
                 }
@@ -6163,17 +6171,29 @@
         },
         "/web/order/detail": {
             "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WebApi"
+                ],
+                "summary": "订单详情",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "订单号",
+                        "name": "orderSerial",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "成功",
                         "schema": {
                             "$ref": "#/definitions/response.OrderDetailResp"
-                        }
-                    },
-                    "400": {
-                        "description": "{\"msg\":\"获取失败\"}",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
@@ -8633,6 +8653,15 @@
             "properties": {
                 "config": {
                     "$ref": "#/definitions/config.Server"
+                }
+            }
+        },
+        "web.RespLogin": {
+            "type": "object",
+            "properties": {
+                "x-token": {
+                    "description": "请求Token",
+                    "type": "string"
                 }
             }
         }
